- Web AMD only uRequire build. - almond.js build of standalone uBerscore.js works as <script> with `wrap` trick (https://github.com/jrburke/almond/issues/42) - working towards standalone uBerscore.js (using almond) working with AMD - needs shim for 'lodash'

--- a/source/examples/uBerscoreExample_unoptimized_AMD.html
+++ b/source/examples/uBerscoreExample_unoptimized_AMD.html
@@ -8,13 +8,15 @@
     <script type="text/javascript">
 
        require.config ({
-        baseUrl: '../../build/code',
+        baseUrl: '../../build/code', // Loaded as individual AMD/UMD without optimization
         paths: {
-//          lodash: "../../libs/lodash.min"
-          lodash: "../../libs/underscore-min" // drop in 'alternative' of lodash
+          lodash: "../../libs/lodash.min"
+//          lodash: "../../libs/underscore-min" // drop in 'alternative' of lodash
         },
         shim: {
-          lodash: { deps: [], exports: "_"} // needed only for underscore
+          lodash: {
+              deps: [], exports: "_" // needed only for underscore
+          }
         }
       });
 
