--- a/source/examples/uBerscoreExample_almondJS_noAMD.html
+++ b/source/examples/uBerscoreExample_almondJS_noAMD.html
@@ -6,14 +6,21 @@
     <title>uBerscore example, using a plain &ltscript/> loader</title>
     <!--<script src="../../libs/lodash.min.js"></script>-->
     <script src="../../libs/underscore-min.js"></script>
+
+    <!-- Loading as plain JS, rootExports uBerscore & _B as window global vars -->
     <script src="../../build/uBerscore.js"></script>
 
     <script type="text/javascript">
 //       setTimeout( function() {
           // todo: normal almond AMD loader is loading asynchronously
           // so we need to wait for it to finish loading (or wait for dom ready?)
-          // todo: report it on r.js forums
-          // uBerscore is using a (slighly) modified almond.js where line ~354 'if (forceSync)' -> 'if (true)', which does the trick!
+
+          // see https://github.com/jrburke/almond/issues/42
+
+          // (dirty) Solution #1: uBerscore is using a (slighly) modified almond-sync.js
+          // where line ~354 'if (forceSync)' becomes 'if (true)', which does the trick!
+
+          // (better) Soluton #2 https://github.com/jrburke/almond/issues/42#issuecomment-9498562
 
           var o = {a:5, b:-2, c:3},
               consoleKV = function(v,k){console.log(k,':',v)};
