--- a/source/examples/uBerscoreExample_almondJS_noAMD.html
+++ b/source/examples/uBerscoreExample_almondJS_noAMD.html
@@ -8,7 +8,7 @@
     <script src="../../libs/underscore-min.js"></script>
 
     <!-- Loading as plain JS, rootExports uBerscore & _B as window global vars -->
-    <script src="../../build/uBerscore.js"></script>
+    <script src="../../build/dist/uBerscore-dev.js"></script>
 
     <script type="text/javascript">
 //       setTimeout( function() {
