almond.js build embeded with uRequire - premature

--- a/source/examples/uBerscoreExample_almondJS_AMD.html
+++ b/source/examples/uBerscoreExample_almondJS_AMD.html
@@ -10,8 +10,8 @@
         require.config({
             // baseUrl: '../../build/code',
             paths : {
-//                lodash : "../../libs/lodash.min",
-                lodash: "../../libs/underscore-min", // drop in 'alternative' of lodash
+                lodash : "../../libs/lodash.min",
+//                lodash: "../../libs/underscore-min", // drop in 'alternative' of lodash
                 uBerscore : "../../build/dist/uBerscore-dev"
             }
 //            ,
