--- a/source/examples/uBerscoreExample_unoptimized_AMD.html
+++ b/source/examples/uBerscoreExample_unoptimized_AMD.html
@@ -27,7 +27,7 @@
 
           ub.go(o, {iter: consoleKV} );
 
-          // globals _B & uBerscore
+          console.log("uBerscore & _B globals");
           uBerscore.go(o, {iter: consoleKV} );
           console.log("Sorted");
           _B.go(o, {iter: consoleKV, sort: function(v){return v} } );
