--- a/source/examples/uBerscoreExample_almondJS_noAMD.html
+++ b/source/examples/uBerscoreExample_almondJS_noAMD.html
@@ -4,8 +4,8 @@
   <head>
     <meta charset="utf-8">
     <title>uBerscore example, using a plain &ltscript/> loader</title>
-    <!--<script src="../../libs/lodash.min.js"></script>-->
-    <script src="../../libs/underscore-min.js"></script>
+    <script src="../../libs/lodash.min.js"></script>
+    <!--<script src="../../libs/underscore-min.js"></script>-->
 
     <!-- Loading as plain JS, rootExports uBerscore & _B as window global vars -->
     <script src="../../build/dist/uBerscore-dev.js"></script>
