--- a/source/examples/uBerscoreExample_unoptimized_AMD.html
+++ b/source/examples/uBerscoreExample_unoptimized_AMD.html
@@ -31,6 +31,8 @@
           uBerscore.go(o, {iter: consoleKV} );
           console.log("Sorted");
           _B.go(o, {iter: consoleKV, sort: function(v){return v} } );
+
+          console.log(_B.okv({}, 'weird &$%$% keys*&&Q', 'are cool! ') );
       });
 
     </script>
