--- a/source/examples/uBerscoreExample_almondJS_AMD.html
+++ b/source/examples/uBerscoreExample_almondJS_AMD.html
@@ -4,21 +4,27 @@
 <head>
     <meta charset="utf-8">
     <title>uBerscore example using AMD/RequireJS loader</title>
-    <script src="../../libs/require-min.js"></script>
+    <script src="../../libs/require.js"></script>
     <script type="text/javascript">
 
         require.config({
             // baseUrl: '../../build/code',
             paths : {
-                lodash : "../../libs/lodash.min",
-//                lodash: "../../libs/underscore-min", // drop in 'alternative' of lodash
+                lodash: "../../libs/lodash.min",
+                //lodash: "../../libs/underscore-min", // drop in 'alternative' of lodash
+                backbone: "../../libs/backbone",
                 uBerscore : "../../build/dist/uBerscore-dev"
             }
-//            ,
-//            shim : {
-////               //lodash : { deps : [], exports : "_"} // needed only for underscore
-////               uBerscore: { deps: ['lodash'], exports: "_B" }
-//            }
+            ,
+            shim : {
+//                uBerscore: { deps: ['lodash'], exports: "_B" }, // not needed
+//                lodash : { // needed only when 'lodash' is 'underscore'
+//                   deps : [], exports : "_"
+//               },
+               backbone: {
+                   deps: ['lodash'], exports: "Backbone"
+               }
+            }
         });
         console.log("loadin uBerscore!");
         require(['uBerscore'], function (ub) {
@@ -39,6 +45,8 @@
             _B.go(o, {iter : consoleKV, sort : function (v) {
                 return v
             } });
+
+            _B.backboner();
         });
     </script>
 </head>
