--- a/source/examples/uBerscoreExample_almondJS_AMD.html
+++ b/source/examples/uBerscoreExample_almondJS_AMD.html
@@ -1,11 +1,19 @@
 <!DOCTYPE html>
-
 <html>
-<head>
-    <meta charset="utf-8">
-    <title>uBerscore example using AMD/RequireJS loader</title>
+    <head>
+        <meta charset="utf-8">
+        <title>uBerscore optimized example using AMD/RequireJS loader</title>
+    </head>
+
+    <body>
+        <strong>uBerscore optimized example using AMD/RequireJS loader</strong>
+        <p/>Dependencies (lodash) are loaded through RequireJs loader (using its paths)
+        <p/>uBerscore's path it self is defined in RequireJs paths
+        <p/>Check console
+    </body>
+
     <script src="../../libs/require.js"></script>
-    <script type="text/javascript">
+    <script>
 
         require.config({
             // baseUrl: '../../build/code',
@@ -17,41 +25,54 @@
             }
             ,
             shim : {
-//                uBerscore: { deps: ['lodash'], exports: "_B" }, // not needed
-//                lodash : { // needed only when 'lodash' is 'underscore'
-//                   deps : [], exports : "_"
-//               },
+        //                uBerscore: { deps: ['lodash'], exports: "_B" }, // not needed
+        //                lodash : { // needed only when 'lodash' is 'underscore'
+        //                   deps : [], exports : "_"
+        //               },
                backbone: {
                    deps: ['lodash'], exports: "Backbone"
                }
             }
         });
-        console.log("loadin uBerscore!");
-        require(['uBerscore'], function (ub) {
-            console.log("loaded uBerscore");
-            var o = {a : 5, b : -2, c : 3},
-                    consoleKV = function (v, k) {
-                        console.log(k, ':', v)
-                    };
 
-            console.log("ub local");
-            ub.go(o, {iter : consoleKV});
+        // lets create two globals, that will be hijacked by uBerscore when loaded
+        _B = 'Old global _B';
+        uBerscore = 'Old global uBerscore';
 
-            // globals _B & uBerscore
-            console.log("uBerscore global, sorted");
-            uBerscore.go(o, {iter : consoleKV});
+        console.log("LOADING uBerscore via requireJs....");
+        require(['uBerscore'], function(ub){
+          console.log("...LOADED uBerscore via requireJs!");
+          var o = {a: 5, c: 3, b: -2},
+            consoleKV = function(v,k){console.log(k, ':', v)};
 
-            console.log("_B global, sorted");
-            _B.go(o, {iter : consoleKV, sort : function (v) {
-                return v
-            } });
+          console.log("ub local dependency variable");
+          ub.go(o, {iter: consoleKV});
 
+          // globals _B & uBerscore
+          console.log("uBerscore global");
+          uBerscore.go(o, {iter: consoleKV});
+
+          console.log("_B global, sorted by value");
+          _B.go(o, {iter: consoleKV, sort: function(v){return v} });
+
+          console.log("_B global, sorted by key");
+          _B.go(o, {iter: consoleKV, sort: function(v, k){return k} });
+
+          console.log(_B.okv({}, 'weird &$%$% keys*&&Q', 'are cool! '));
+
+          console.log("Checking noConflict(), reclaim globals _B & uBerscore.");
+          console.log("Current values:");
+          console.log(_B);
+          console.log(uBerscore);
+          var local_B = _B.noConflict();
+          console.log("noConflict() was called - new values:");
+          console.log("Old _B is '" + _B + "'");
+          console.log("Old uBerscore is '" + uBerscore + "'");
+
+          console.log("local_B still works, sorted by key");
+          local_B.go(o, {iter: consoleKV, sort: function(v, k){return k} });
         });
+
+
     </script>
-</head>
-
-<body>
-Check console
-</body>
-
 </html>
