splitting blending/bindAndCertain

--- a/source/spec/SpecRunner_unoptimized_AMD.html
+++ b/source/spec/SpecRunner_unoptimized_AMD.html
@@ -34,6 +34,7 @@
         mocha: "../../libs/mocha",
 
         lodash: "../../libs/lodash.min",
+//        underscore: "../../libs/lodash.min",
         //lodash: "../../libs/underscore-min", // drop in 'alternative' of lodash
         backbone: "../../libs/backbone",
 
