--- a/source/examples/uBerscoreExample_unoptimized_AMD.html
+++ b/source/examples/uBerscoreExample_unoptimized_AMD.html
@@ -26,6 +26,7 @@
       // all libraries are now relative to the bundle/baseUrl
       paths: {
         lodash: "../../libs/lodash.min",
+        underscore: "../.././libs/lodash.min", // doesnt work without ther /./ hack !'
         //lodash: "../../libs/underscore-min", // drop in 'alternative' of lodash :-)
         backbone: "../../libs/backbone"
         // ** uRequire note: **
@@ -39,6 +40,7 @@
 
       shim: {
         lodash: { deps: [], exports: "_"}, // needed only when 'lodash' is 'underscore'
+//        underscore: { deps: [], exports: "_"}, // needed only when 'lodash' is 'underscore'
         backbone: {deps: ['lodash'], exports: "Backbone"}
       }
     });
@@ -67,18 +69,18 @@
       _B.go(o, {iter: consoleKV, sort: function(v, k){return k} });
 
       console.log(_B.okv({}, 'weird &$%$% keys*&&Q', 'are cool! '));
-
-      console.log("Checking noConflict(), reclaim globals _B & uberscore.");
-      console.log("Current values:");
-      console.log(_B);
-      console.log(uberscore);
-      var local_B = _B.noConflict();
-      console.log("noConflict() was called - new values:");
-      console.log("Old global `_B` is '" + _B + "'");
-      console.log("Old global `uberscore` is '" + uberscore + "'");
-
-      console.log("local_B still works, sorted by key");
-      local_B.go(o, {iter: consoleKV, sort: function(v, k){return k} });
+//
+//      console.log("Checking noConflict(), reclaim globals _B & uberscore.");
+//      console.log("Current values:");
+//      console.log(_B);
+//      console.log(uberscore);
+//      var local_B = _B.noConflict();
+//      console.log("noConflict() was called - new values:");
+//      console.log("Old global `_B` is '" + _B + "'");
+//      console.log("Old global `uberscore` is '" + uberscore + "'");
+//
+//      console.log("local_B still works, sorted by key");
+//      local_B.go(o, {iter: consoleKV, sort: function(v, k){return k} });
     });
   </script>
 </html>
