- docs updating of Gruntfile as uRequire examples - level in Logger.addDebugPathLevel can be a parsable Number String

--- a/source/spec/SpecRunner_unoptimized_AMD.html
+++ b/source/spec/SpecRunner_unoptimized_AMD.html
@@ -27,10 +27,10 @@
      require.config ({
       // set baseUrl to point to the 'bundle', relative to this HTML
 
-//      baseUrl: '../../build/UMD', // needed only if loading as individual AMD/UMD (without optimization)
+      baseUrl: '../../build/UMD', // needed only if loading as individual AMD/UMD (without optimization)
 //      baseUrl: '../../build/AMDunderscore',
 //      baseUrl: '../../build/UMDunderscore',
-      baseUrl: '../../build/UMDreplaceDep',
+//      baseUrl: '../../build/UMDreplaceDep',
 
       // all libraries are now relative to the bundle/baseUrl
       paths: {
