--- a/source/examples/uBerscoreExample_almondJS_AMD.html
+++ b/source/examples/uBerscoreExample_almondJS_AMD.html
@@ -2,11 +2,11 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>uberscore example - almondjs OPTIMIZED, AMD/RequireJS loader</title>
+    <title>example: uBerscore : 'combined', loader: 'AMD/RequireJS' }</title>
   </head>
 
   <body>
-    <h1>uberscore example - almondjs OPTIMIZED, AMD/RequireJS loader</h1>
+    <h1>example: uBerscore : 'combined', loader: 'AMD/RequireJS' }</h1>
 
     <strong> ** uRequire note: **</strong>
     <ul>
