--- a/source/examples/uBerscoreExample_almondJS_noAMD_plainScript.html
+++ b/source/examples/uBerscoreExample_almondJS_noAMD_plainScript.html
@@ -2,11 +2,11 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>uberscore example - almondjs OPTIMIZED, plain &ltscript/&gt loader</title>
+    <title>example: uBerscore : 'combined', loader: '&ltscript/&gt' }</title>
   </head>
 
   <body>
-    <h1>uberscore example - almondjs OPTIMIZED, plain &ltscript/&gt loader</h1>
+    <h1>example: uBerscore : 'combined', loader: '&ltscript/&gt' }</h1>
 
     <strong> ** uRequire note: **</strong>
     <ul>
