--- a/source/spec/SpecRunner_almondJs_noAMD_plainScript.html
+++ b/source/spec/SpecRunner_almondJs_noAMD_plainScript.html
@@ -2,11 +2,17 @@
 <html>
   <head>
     <!--<meta charset="utf-8">-->
-    <title>uberscore spec - almondjs OPTIMIZED, plain &ltscript/&gt loader</title>
+    <title>
+       test: `uberscore-dev.js` & `spec_combined/index-combined.js`: 'combined', loader: '&ltscript/&gt'
+    </title>
   </head>
 
   <body>
-    <h1>uberscore spec - almondjs OPTIMIZED, plain &ltscript/&gt loader</h1>
+    <h1> `uberscore-dev.js` & `spec_combined/index-combined.js`</h1>
+
+    <h2> template: 'combined' (r.js/almondjs + uRequire mini-runtime) </h2>
+
+    <h3> Loader: "'&ltscript/&gt'"</h3>
 
     <strong> ** uRequire note: **</strong>
     <ul>
