--- a/source/spec/SpecRunner_almondJs_noAMD_plainScript_min.html
+++ b/source/spec/SpecRunner_almondJs_noAMD_plainScript_min.html
@@ -2,11 +2,18 @@
 <html>
   <head>
     <!--<meta charset="utf-8">-->
-    <title>uberscore spec - almondjs OPTIMIZED & min, plain &ltscript/&gt loader</title>
+    <title>
+      test: `uberscore-min.js` & `spec_combined/index-combined.js`: 'combined' & 'optimized', loader: '&ltscript/&gt'
+    </title>
   </head>
 
   <body>
-    <h1>uberscore spec - almondjs OPTIMIZED & min, plain &ltscript/&gt loader</h1>
+    <h1>test: uberscore & spec: 'combined' & 'optimized', loader: '&ltscript/&gt' }</h1>
+
+    <h1> `uberscore-min.js` & `spec_combined/index-combined.js`</h1>
+    <h2> template: 'combined' (r.js/almondjs + uRequire mini-runtime) </h2>
+
+    <h3> Loader: "'&ltscript/&gt'"</h3>
 
     <strong> ** uRequire note: **</strong>
     <ul>
