--- a/source/spec/SpecRunner_unoptimized_AMD.html
+++ b/source/spec/SpecRunner_unoptimized_AMD.html
@@ -2,11 +2,21 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>uberscore spec - UNOPTIMIZED, AMD/RequireJS loader</title>
+    <title>test: uberscore & spec: 'UMDplain', loader: 'AMD/RequireJS' }</title>
   </head>
 
   <body>
-    <h1>uberscore spec - UNOPTIMIZED, AMD/RequireJS loader</h1>
+
+    <h1>uberscore/spec - template: 'UMDplain'/'UMD', loader: 'AMD/RequireJS' }</h1>
+
+    <h1> `uberscore.js` </h1>
+    <h2> template: 'UMDplain' </h2>
+
+    <h1> `spec` </h1>
+
+    <h2> template: 'UMD' </h2>
+
+    <h3> Loader: "AMD/RequireJS"</h3>
 
     <strong> ** uRequire note: **</strong>
     <ul>
